2007-02-26  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-transform-region.c (normalize_coords): removed a
	redundant condition and marked another one as unlikely.

2007-02-26  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-scale.c
	* app/actions/image-commands.c: cosmetics.

2007-02-26  Sven Neumann  <sven@gimp.org>

	* app/tools/gimptransformtool.c (gimp_transform_tool_doit): queue
	a redraw of the canvas instead of exposing the transform
	preview. Removes annoying flicker when the tool is finished.

2007-02-26  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-transform-region.c: moved common code to an
	inlined function. gimp_transform_region_lanczos() now also does
	supersampling.  Removed boundary checks and clamping as
	PixelSurround and read_pixel_data_1() already deal with this for
	us. Gives another small speedup.

2007-02-26  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-transform-region.c (gimp_transform_region_lanczos):
	use PixelSurround instead of read_pixel_data_1(). This yields a
	dramatic speedup.

2007-02-26  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-transform-region.c (gimp_transform_region_lanczos):
	iterate	over tiles instead of rows in the destination buffer.

2007-02-26  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-transform-region.c (gimp_transform_region): moved
	linear and cubic code to their own functions and let them iterate
	over tiles instead of rows in the destination buffer.

2007-02-26  Sven Neumann  <sven@gimp.org>

	* authors.xml: restored alphabetical order.

2007-02-26  Sven Neumann  <sven@gimp.org>

	* Makefile.am: added a dependency for AUTHORS on authors.xsl.

	* authors.xsl: changed to list contributors with their role.

	* AUTHORS: regenerated.

2007-02-26  Sven Neumann  <sven@gimp.org>

	* configure.in
	* plug-ins/common/screenshot.c: added checks for X11 Shape
	Extension and build the shaped window feature conditionally.

2007-02-26  Sven Neumann  <sven@gimp.org>
