@@ -1,3 +1,13 @@
+2007-02-27  Sven Neumann  <sven@gimp.org>
+
+	* app/core/Makefile.am
+	* app/core/core-types.h
+	* app/core/gimpsubprogress.[ch]: added GimpSubProgress, an object
+	that implements the GimpProgress interface and maps progress
+	information to a sub-range of the parent progress.
+
+	* app/core/gimpimage-scale.c (gimp_image_scale): use the new object.
+
 2007-02-26  Sven Neumann  <sven@gimp.org>
 
 	* app/core/gimp-transform-region.c (normalize_coords): removed a
